--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,4 +37,4 @@ upload_to_s3:
     - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
     - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - aws configure set default.region us-east-2
-    - aws s3 sync ./build s3://$S3_BUCKET_NAME --acl public-read --delete
+    - aws s3 sync ./build s3://$S3_BUCKET_NAME --delete
