--- a/package.json
+++ b/package.json
@@ -17,5 +17,16 @@
   "dependencies": {
     "aws-sdk": "^2.1459.0",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.6.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
