--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "nodemon src/index.ts",
     "build": "sh scripts/build.sh"
   },
   "repository": {
@@ -16,11 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1459.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^3.0.1",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.20",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.6.2",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
