--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "build": "sh scripts/build.sh"
+    "build-app": "sh scripts/build.sh",
+    "build-lambda": "tsup"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,8 @@
     "express": "^4.18.2",
     "knex": "^3.0.1",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "tsup": "^7.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.20",
